package com.cs2340.interstellarmerchant.utilities.command;

public interface Command {
    void execute();
    void unexecute();
}
